fixed some design and layout issues

--- a/assets/css/agendaView.css
+++ b/assets/css/agendaView.css
@@ -1,6 +1,6 @@
 .jumbotron.dayButton {
 	margin-top: 30px;
-	height: 800px;
+	height: 750px;
 	width: 300px;
 	margin-right: 20px;
 	padding: 0px;
@@ -14,7 +14,7 @@
 
 .jumbotron.day {
 	margin-top: 30px;
-	height: 800px;
+	height: 750px;
 	width: 300px;
 	margin-right: 20px;
 	padding: 0px;
