--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,13 +1,13 @@
-#content {
-	padding-bottom:30px; /* Height of the footer element */
+.footer {
+	clear: both;
+	background-color: #65c1c2;
+	color: white;
+	height: 35px;
+	padding-top: 5px;
 }
 
-.footer {
-	width:100%;
-	height:30px;
-	position:absolute;
-	bottom:0;
-	left:0;
+.footer .container {
+	margin-left: 10px;
 }
 
 #main-page {
@@ -18,7 +18,7 @@
 }
 
 .jumbotron.main-page {
-	margin-top: 20%;
+	margin-top: 18%;
 	width: 50%;
 	opacity: 0.9;
 	padding: 2%;
@@ -27,13 +27,13 @@
 
 .navbar {
 	background-color: #dc465d;
-	height: 75px;
+	height: 110px;
 	margin: 0px;
 }
 
-.navbar p {
-	color: white;
-	font-size: 30px;
-	white-space: nowrap;
-	margin-top: 10px;
+#header_title {
+	margin-top: 20px;
+	margin-left: 0px;
 }
+
+
